--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,32 @@
 
         </android.support.v4.view.ViewPager>
 
+        <LinearLayout
+            android:id="@+id/main_layout_nologin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="To use this function,
+you need to login our service.
+
+:("
+                android:textAlignment="center"
+                android:textColor="#333333"
+                android:textSize="17dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
