--- a/app/src/main/res/layout/activity_image_contents.xml
+++ b/app/src/main/res/layout/activity_image_contents.xml
@@ -186,7 +186,7 @@
 
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/comments_list"
+                android:id="@+id/image_comments_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#FFFFFF" />
