--- a/app/src/main/res/layout/fragment_image_comments.xml
+++ b/app/src/main/res/layout/fragment_image_comments.xml
@@ -1,47 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image_comment_layout_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:layout_marginTop="18.25dp"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:orientation="horizontal">
 
     <ImageView
         android:layout_width="51.83dp"
         android:layout_height="51.83dp"
         android:layout_marginLeft="14.56dp"
         android:src="@drawable/mypage_btn_mid_comment_profile" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
+                android:id="@+id/image_comment_name"
                 android:layout_width="0dp"
                 android:layout_height="19dp"
-                android:layout_weight="1"
-                android:layout_marginTop="12.28dp"
                 android:layout_marginLeft="15.4dp"
+                android:layout_marginTop="12.28dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:text="Name surname"
                 android:textColor="#000000"
                 android:textSize="14dp"
-                android:textStyle="bold"
-                android:text="Name surname"
-                android:ellipsize="end"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="17.63dp"
                 android:layout_marginTop="9.32dp"
-                android:textColor="#000000"
-                android:text="Delete"/>
+                android:text="Delete"
+                android:textColor="#000000" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/video_comment_text_title"
+            android:id="@+id/image_comment_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14.44dp"
@@ -58,27 +63,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
-                android:id="@+id/video_contents_tv_comment_edit"
+                android:id="@+id/image_contents_tv_comment_date"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="14dp"
-                android:layout_marginTop="6.74dp"
                 android:layout_marginLeft="15.4dp"
+                android:layout_marginTop="6.74dp"
+                android:layout_weight="1"
                 android:text="04/21/2018"
-                android:textSize="10dp"
-                android:textColor="#B1B1B1"/>
+                android:textColor="#B1B1B1"
+                android:textSize="10dp" />
+
             <Button
+                android:id="@+id/image_contents_btn_recomment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="17.21dp"
-                android:drawableLeft="@drawable/open_reply_page_icon"
                 android:layout_marginTop="4.81dp"
                 android:background="#ffffff"
-                android:textColor="#000000"
-                android:textSize="10dp"
+                android:drawableLeft="@drawable/open_reply_page_icon"
                 android:text=" 120 Replies"
-                android:textAllCaps="false"/>
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="10dp" />
         </LinearLayout>
 
     </LinearLayout>
