--- a/app/src/main/res/layout/activity_video_contents.xml
+++ b/app/src/main/res/layout/activity_video_contents.xml
@@ -4,28 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <VideoView
+    <WebView
             android:id="@+id/video_contents_vv_video"
-            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:background = "#000000"
+            android:layout_width="match_parent"
             android:layout_height="186.95dp" />
-        <Button
-            android:layout_width="61.36dp"
-            android:layout_height="61.36dp"
-            android:background="@drawable/play_inside_content_icon"
-            android:layout_gravity="center" />
-
-        <Button
-            android:id="@+id/video_contents_iv_video_cancel"
-            android:layout_width="17.79dp"
-            android:layout_height="17.79dp"
-            android:layout_marginLeft="18.25dp"
-            android:layout_marginTop="18.25dp"
-            android:background="@drawable/content_x_btn" />
-</FrameLayout>
     //1
         <LinearLayout
             android:layout_width="match_parent"
