--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,10 +8,11 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_gravity="center"
+        app:lottie_rawRes="@raw/splash"
         app:lottie_autoPlay="true"
-        app:lottie_loop="false" />
+        app:lottie_loop="true" />
 
 </LinearLayout>
