--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -127,7 +127,8 @@
     <com.cow.bridge.search.searchlibrary.MaterialSearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
     </com.cow.bridge.search.searchlibrary.MaterialSearchView>
 
