--- a/app/src/main/res/layout/activity_video_contents.xml
+++ b/app/src/main/res/layout/activity_video_contents.xml
@@ -4,12 +4,19 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="186.95dp">
     <WebView
-            android:id="@+id/video_contents_vv_video"
-            android:layout_gravity="center"
-            android:background = "#000000"
+            android:id="@+id/video_contents_wv_video"
             android:layout_width="match_parent"
             android:layout_height="186.95dp" />
+        <VideoView
+            android:id="@+id/video_contents_vv_video"
+            android:layout_width="match_parent"
+            android:layout_height="186.95dp" />
+
+    </FrameLayout>
     //1
         <LinearLayout
             android:layout_width="match_parent"
