--- a/app/src/main/res/layout/activity_image_contents.xml
+++ b/app/src/main/res/layout/activity_image_contents.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
@@ -26,7 +25,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:padding="10dp"
                 android:orientation="vertical">
 
                 <!-- X 버튼 -->
@@ -35,7 +35,6 @@
                     android:layout_width="17.79dp"
                     android:layout_height="17.79dp"
                     android:layout_marginLeft="18.18dp"
-                    android:layout_marginTop="10.69dp"
                     android:id="@+id/imgContentsBackBtn"
                     android:background="@drawable/content_x_btn" />
             </LinearLayout>
@@ -53,7 +52,6 @@
                     android:orientation="horizontal">
 
                     <!-- 사진 개수 알려주는 텍스트-->
-
 
                     <TextView
                         android:id="@+id/currentNum"
@@ -79,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="left"
-                        android:text="19/20"
+                        android:text="20"
                         android:textColor="#fff"
                         android:textSize="14dp" />
 
@@ -108,6 +106,7 @@
                 android:id="@+id/imgView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="10dp"
                 android:layout_weight="1">
 
                 <android.support.v4.view.ViewPager
