--- a/app/src/main/res/layout/row_libraryfolder_simple.xml
+++ b/app/src/main/res/layout/row_libraryfolder_simple.xml
@@ -11,13 +11,14 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="155dp"
-        android:layout_height="80dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#F4F4F4">
 
         <ImageView
             android:id="@+id/folder_image_thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             app:srcCompat="@drawable/home_logo_with_text_icon" />
 
     </FrameLayout>
