--- a/app/src/main/res/layout/activity_image_contents.xml
+++ b/app/src/main/res/layout/activity_image_contents.xml
@@ -55,10 +55,10 @@
 
                     <TextView
                         android:id="@+id/currentNum"
-                        android:layout_width="wrap_content"
+                        android:layout_width="20dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="18.15dp"
-                        android:gravity="left"
+                        android:gravity="right"
                         android:text="1"
                         android:textColor="#fff"
                         android:textSize="14dp" />
