--- a/app/src/main/res/layout/dialog_feed_back.xml
+++ b/app/src/main/res/layout/dialog_feed_back.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/round"
-    android:padding="20dp"
+    android:padding="10dp"
     android:id="@+id/feedback_dialog">
 
     <LinearLayout
@@ -40,7 +40,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center">
 
         <ScrollView
             android:id="@+id/scrollView1"
@@ -49,7 +50,7 @@
 
             <LinearLayout
                 android:id="@+id/main"
-                android:layout_width="222.73dp"
+                android:layout_width="match_parent"
                 android:layout_height="114.25dp"
                 android:orientation="vertical"
                 android:background="#F7F7F7">
@@ -81,8 +82,8 @@
         android:background="@drawable/round_btn_send"
         android:text="Send"
         android:layout_marginTop="22.19dp"
-        android:textColor="#FFFFFF" />
-
+        android:textColor="#FFFFFF"
+        android:enabled="false"/>
 
 
 </LinearLayout>
