--- a/app/src/main/res/layout/fragment_image_comments.xml
+++ b/app/src/main/res/layout/fragment_image_comments.xml
@@ -37,12 +37,14 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/image_comment_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="17.63dp"
                 android:layout_marginTop="9.32dp"
                 android:text="Delete"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:visibility="gone" />
         </LinearLayout>
 
         <TextView
