--- a/app/src/main/res/layout/row_video_contents_video.xml
+++ b/app/src/main/res/layout/row_video_contents_video.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/video_contents_video_layout_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,8 +25,7 @@
                 android:layout_width="29.55dp"
                 android:layout_height="29.55dp"
                 android:layout_gravity="bottom"
-                android:src="@drawable/home_video_thumnail_icon"
-                android:background="@drawable/round_btn_done"/>
+                android:src="@drawable/home_video_thumnail_icon" />
 
             <TextView
                 android:id="@+id/video_contents_video_tv_contents_time"
