--- a/app/src/main/res/layout/activity_request_content.xml
+++ b/app/src/main/res/layout/activity_request_content.xml
@@ -3,118 +3,202 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
     android:orientation="vertical">
 
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/main_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="82dp"
-        android:layout_gravity="top"
-        android:background="#FFFFFF"
-        android:elevation="4dp"
-        app:contentInsetEnd="0dp"
-        app:contentInsetStart="0dp">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF">
-
-            <ImageView
-                android:id="@+id/request_image_back"
-                android:layout_width="51dp"
-                android:layout_height="51dp"
-                android:layout_gravity="center_vertical"
-                android:padding="17dp"
-                app:srcCompat="@drawable/back_btn" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:text="Interpretation"
-                android:textColor="#333333"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-        </FrameLayout>
-    </android.support.v7.widget.Toolbar>
-
-    <LinearLayout
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:sothree="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="23dp"
-        android:orientation="vertical">
+        android:gravity="bottom"
+        sothree:umanoPanelHeight="39dp"
+        sothree:umanoShadowHeight="4dp">
 
-        <TextView
-            android:id="@+id/request_text_title"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="제목입니다"
-            android:textColor="#000000"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            android:layout_height="82dp"
+            android:layout_gravity="top"
+            android:background="#FFFFFF"
+            android:elevation="4dp"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp">
 
-        <ImageView
-            android:id="@+id/imageView14"
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFFFFF">
+
+                <ImageView
+                    android:id="@+id/request_image_back"
+                    android:layout_width="51dp"
+                    android:layout_height="51dp"
+                    android:layout_gravity="center_vertical"
+                    android:padding="17dp"
+                    app:srcCompat="@drawable/back_btn" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:text="Interpretation"
+                    android:textColor="#333333"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_gravity="bottom"
+                    android:background="#E1E1E1" />
+
+            </FrameLayout>
+        </android.support.v7.widget.Toolbar>
+
+<LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#000000" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="23dp"
+            android:orientation="vertical"
+
+            >
+
+            <TextView
+                android:id="@+id/request_text_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="제목입니다"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#000000" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="29dp"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/request_text_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kim name"
+                    android:textColor="#000000"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/request_text_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.63"
+                    android:text="04/21/2018"
+                    android:textColor="#000000"
+                    android:textSize="12dp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/request_text_link"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:autoLink="web"
+                android:text="www.youtube.com/eljlkef.sdfkdskflks  "
+                android:textColor="#000000"
+                android:textColorLink="@color/colorPrimary"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/request_text_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minLines="10"
+                android:text="내용내용내용내용내용
+            내용내용내용내용
+            내용  "
+                android:textColor="#000000"
+                android:textSize="14dp" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="29dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/request_text_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/commentsBtn"
+                android:layout_width="match_parent"
+                android:layout_height="36.39dp"
+                android:background="#fff"
+                android:includeFontPadding="false"
+                android:text="Comments"
+                android:textAllCaps="false"
+                android:textColor="#E31C9E"
+                android:textSize="17dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#E31C9E" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/image_comments_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Kim name"
-                android:textColor="#000000"
-                android:textSize="12dp" />
+                android:background="#FFFFFF" />
 
-            <TextView
-                android:id="@+id/request_text_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:alpha="0.63"
-                android:text="04/21/2018"
-                android:textColor="#000000"
-                android:textSize="12dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_gravity="bottom"
+                android:orientation="horizontal"
+                android:background="#FFFFFF">
+
+                <FrameLayout
+                    android:id="@+id/video_contents_tv_comment_edit"
+                    android:layout_width="255.03dp"
+                    android:layout_height="34.77dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:layout_weight="1"
+                    >
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edit_enter_text"
+                        android:hint="Add a comment"
+                        android:id="@+id/contents_comment_edit"
+                        android:paddingLeft="15dp" />
+                </FrameLayout>
+
+                <Button
+                    android:id="@+id/image_contents_comment_post_btn"
+                    android:layout_width="62.73dp"
+                    android:layout_height="35.09dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="7.97dp"
+                    android:layout_marginRight="14.4dp"
+                    android:layout_toRightOf="@id/video_contents_tv_comment_edit"
+                    android:background="@drawable/round_btn_done"
+                    android:text="POST"
+                    android:textColor="#FFFFFF" />
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/request_text_link"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:autoLink="web"
-            android:text="www.youtube.com/eljlkef.sdfkdskflks  "
-            android:textColor="#000000"
-            android:textColorLink="@color/colorPrimary"
-            android:textSize="14dp" />
-
-        <TextView
-            android:id="@+id/request_text_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minLines="10"
-            android:text="내용내용내용내용내용
-            내용내용내용내용
-            내용  "
-            android:textColor="#000000"
-            android:textSize="14dp" />
-
-    </LinearLayout>
-
+        
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 </LinearLayout>
