--- a/app/src/main/res/layout/activity_video_contents.xml
+++ b/app/src/main/res/layout/activity_video_contents.xml
@@ -4,17 +4,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="186.95dp">
-    <WebView
+        android:layout_height="190dp">
+
+        <WebView
             android:id="@+id/video_contents_wv_video"
             android:layout_width="match_parent"
-            android:layout_height="186.95dp" />
+            android:layout_height="wrap_content" />
+
         <VideoView
             android:id="@+id/video_contents_vv_video"
             android:layout_width="match_parent"
-            android:layout_height="186.95dp" />
+            android:layout_height="wrap_content" />
 
     </FrameLayout>
     //1
