--- a/app/src/main/res/layout/row_subscribe_empty.xml
+++ b/app/src/main/res/layout/row_subscribe_empty.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/subscribe_text_word"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="Your subscription is empty.\n\n:("
         android:textColor="#000000"
